[gd_scene load_steps=3 format=3 uid="uid://cgvlc1cx7nkql"]

[ext_resource type="Script" path="res://Scripts/EnemyGenerator.gd" id="1_i2tik"]
[ext_resource type="Script" path="res://Components/SpawnerComponent.gd" id="2_nlm5r"]

[node name="EnemyGenerator" type="Node2D"]
script = ExtResource("1_i2tik")

[node name="SpawnerComponent" type="Node" parent="."]
script = ExtResource("2_nlm5r")

[node name="GreenEnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="PinkEnemySpawnTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true
autostart = true

[node name="YellowEnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="GreenEnemySpawnTimer" to="." method="_on_green_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="PinkEnemySpawnTimer" to="." method="_on_pink_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="YellowEnemySpawnTimer" to="." method="_on_yellow_enemy_spawn_timer_timeout"]
